--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
   "author": "naram",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "i": "^0.3.7",
+    "mongoose": "^7.0.5",
+    "npm": "^9.6.5",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "socket.io": "^4.6.0"
   }
 }
