--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "redis": "^4.6.6",
     "socket.io": "^4.6.0"
   }
 }
